@@ -1,3 +1,7 @@
+2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter/Application.cs: removed Chat window from video
+
 2007-06-06  Brady Anderson <banderso@novell.com> 
 
 	* Banter/Account.cs, Banter/Application.cs: debugging video
